cmake_minimum_required(VERSION 4.0)
project(software2025)

set(CMAKE_CXX_STANDARD 14)

add_executable(software2025
        ch01/ch01.cpp
        ch01_80-3/ch01_80-3.cpp
        ch01_81-13/ch01_81-13.cpp
        ch01_81-14/ch01_81-14.cpp
        ch01_81-17/ch01_81-17.cpp
        ch02_81-12/ch01_81-12.cpp)
